# scraper-dados-financeiros

./: .env.example  .gitignore  acoes.db  pyproject.toml
sql/: 0001_cria_tabela_acoes.sql  0002_cria_tabela_dividendos_anuais.sql  0003_altera_definicao_padro_de_datas.sql  0004_adiciona_campos_setor_e_segmento.sql  0005_cria_tabela_dividendos_historico.sql  0006_adiciona_campos_vpa_lpa_roe.sql  0007_cria_tabela_fiis.sql  0008_renomeia_tabelas_para_padrao.sql  0009_define_novas_colunas_para_tabela_acao.sql  0010_define_conjunto_primary_keys_em_acao_historico_dividendos.sql  0011_define_nova_coluna_em_acao_historico_dividendos.sql  0012_redefine_unique_index_de_acao_historico_dividendos.sql  0013_nova_abordagem_para_acao_historico_dividendos.sql
src/: constants.py  db.py  errors.py  main.py  scrappers.py  sheet.py
src/dados_financeiros/: errors.py  main.py
src/dados_financeiros/config/: config.py  envs.py
src/dados_financeiros/models/: acao_com_dividendo.py  dividendo.py
src/dados_financeiros/repositories/: dividendo_historico.py  fii.py
src/models/: acao.py  acao_com_dividendo.py  dividendo.py  fii.py
src/repositories/: acao.py  dividendo.py  dividendo_anual.py  dividendo_historico.py
src/scrappers/: acoes.py  fiis.py
src/services/: acao.py  dividendo.py  dividendo_anual.py  dividendo_historico.py
src/sheet/: acaoCells.py  acao_cells.py  fiisCells.py
src/utils/: datetime.py  formatters.py  investidor10.py  investidor10_acao.py  investidor10_fii.py  logger.py  moeda.py  webdriver.py
src/workflows/: acoes.py  fiis.py
(+31 files in other folders)
